Fixed footer on Safari, decreased some font sizes as requested.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -124,6 +124,8 @@
 
 .entry .entry-content {
 
+	font-size: smaller; // Erin requested the font size be smaller.
+
 	//! Paragraphs
 	p.has-background {
 		padding: 20px 30px;
