--- a/sass/site/header/_site-header.scss
+++ b/sass/site/header/_site-header.scss
@@ -2,7 +2,7 @@
 
 $header-height: 50px;
 $header-padding: 10px;
-$logo-padding: 7px;
+$logo-padding: 8px;
 $admin-bar-height: 32px;
 
 .site-header {
