--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -26,7 +26,7 @@
 
 
 .posts_container {
-	font-size: 0.8em;
+	font-size: 0.9em;
 	margin-bottom: 4rem;
 
 	article {
@@ -183,7 +183,7 @@
 			}
 
 			&:before,
-			&:after, {
+			&:after {
 				position: absolute;
 				display: block;
 				width: 100%;
