--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -93,7 +93,6 @@ h3 {
 
 .site-title,
 .site-description,
-.main-navigation,
 .nav-links,
 .pagination .nav-links,
 .page-title,
