--- a/style-rtl.css
+++ b/style-rtl.css
@@ -537,7 +537,6 @@ h3 {
 
 .site-title,
 .site-description,
-.main-navigation,
 .nav-links,
 .pagination .nav-links,
 .page-title,
@@ -1051,7 +1050,7 @@ a:focus {
   background: transparent;
   color: inherit;
   cursor: pointer;
-  transition: background 250ms ease-in-out, transform 150ms ease;
+  transition: background 250ms ease-in-out, transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -1073,6 +1072,8 @@ a:focus {
   display: inline-block;
   margin: 0;
   padding: 0;
+  font-weight: 400;
+  font-size: 1em;
 }
 
 .main-navigation .main-menu > li {
@@ -1082,13 +1083,12 @@ a:focus {
 }
 
 .main-navigation .main-menu > li > a {
-  font-weight: 700;
   color: #fff;
-  margin-left: 0.5rem;
+  margin-left: 1rem;
 }
 
 .main-navigation .main-menu > li > a + svg {
-  margin-left: 0.5rem;
+  margin-left: 1rem;
 }
 
 .main-navigation .main-menu > li > a:hover,
@@ -1670,7 +1670,7 @@ a:focus {
 }
 
 .footer-navigation .footer-menu > li.menu-item {
-  flex: 1 1 0;
+  flex: 1 1 auto;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -1710,7 +1710,7 @@ a:focus {
 }
 
 .footer-navigation .footer-menu img {
-  max-height: 160px;
+  max-height: 130px;
   object-fit: scale-down;
 }
 
@@ -2145,7 +2145,7 @@ a:focus {
 }
 
 .site-title {
-  margin: -3px 10px;
+  margin: -2px 10px;
   display: inline;
   color: #fff;
 }
@@ -2163,7 +2163,7 @@ a:focus {
 }
 
 .site-title img {
-  height: 36px;
+  height: 34px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -3616,6 +3616,10 @@ a:focus {
   }
 }
 
+.entry .entry-content {
+  font-size: smaller;
+}
+
 .entry .entry-content p.has-background {
   padding: 20px 30px;
 }
@@ -4882,6 +4886,7 @@ svg {
 
 .team-member .team-member__image {
   background: #fff;
+  min-height: 1px;
 }
 
 .team-member .team-member__image img {
