--- a/style.css
+++ b/style.css
@@ -537,7 +537,6 @@ h3 {
 
 .site-title,
 .site-description,
-.main-navigation,
 .nav-links,
 .pagination .nav-links,
 .page-title,
@@ -1051,7 +1050,7 @@ a:focus {
   background: transparent;
   color: inherit;
   cursor: pointer;
-  transition: background 250ms ease-in-out, transform 150ms ease;
+  transition: background 250ms ease-in-out, transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -1073,6 +1072,8 @@ a:focus {
   display: inline-block;
   margin: 0;
   padding: 0;
+  font-weight: 400;
+  font-size: 1em;
 }
 
 .main-navigation .main-menu > li {
@@ -1082,13 +1083,12 @@ a:focus {
 }
 
 .main-navigation .main-menu > li > a {
-  font-weight: 700;
   color: #fff;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
 }
 
 .main-navigation .main-menu > li > a + svg {
-  margin-right: 0.5rem;
+  margin-right: 1rem;
 }
 
 .main-navigation .main-menu > li > a:hover,
@@ -1670,7 +1670,7 @@ a:focus {
 }
 
 .footer-navigation .footer-menu > li.menu-item {
-  flex: 1 1 0;
+  flex: 1 1 auto;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -1710,7 +1710,7 @@ a:focus {
 }
 
 .footer-navigation .footer-menu img {
-  max-height: 160px;
+  max-height: 130px;
   object-fit: scale-down;
 }
 
@@ -2151,7 +2151,7 @@ a:focus {
 }
 
 .site-title {
-  margin: -3px 10px;
+  margin: -2px 10px;
   display: inline;
   color: #fff;
 }
@@ -2169,7 +2169,7 @@ a:focus {
 }
 
 .site-title img {
-  height: 36px;
+  height: 34px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -2460,7 +2460,7 @@ a:focus {
 }
 
 .posts_container {
-  font-size: 0.8em;
+  font-size: 0.9em;
   margin-bottom: 4rem;
 }
 
@@ -3626,6 +3626,10 @@ a:focus {
     max-width: inherit;
     padding: inherit;
   }
+}
+
+.entry .entry-content {
+  font-size: smaller;
 }
 
 .entry .entry-content p.has-background {
